--- a/View/Main.xaml
+++ b/View/Main.xaml
@@ -17,10 +17,11 @@
         </Grid>
         <Menu x:Name="menu" HorizontalAlignment="Left" Height="23" VerticalAlignment="Top" Width="786" RenderTransformOrigin="0.025,0.585">
             <MenuItem Header="Справочники" Width="90">
-                <MenuItem Header="Заказчики" HorizontalAlignment="Left" Width="144" Margin="0,0,-4,0"/>
-                <MenuItem Header="MenuItem" HorizontalAlignment="Left" Width="140"/>
-                <MenuItem Header="MenuItem" HorizontalAlignment="Left" Width="140"/>
-                <MenuItem Header="MenuItem" HorizontalAlignment="Left" Width="140"/>
+                <MenuItem Header="Заказчики" HorizontalAlignment="Left" Width="161" Margin="0,0,-21,0"/>
+                <MenuItem Header="Менеджеры" HorizontalAlignment="Left" Width="170" Margin="0,0,-30,0"/>
+                <MenuItem Header="Подразделения" HorizontalAlignment="Left" Width="179" Margin="0,0,-39,0"/>
+                <MenuItem Header="Изделия" HorizontalAlignment="Left" Width="140"/>
+                <MenuItem Header="Работники" HorizontalAlignment="Left" Height="22" Width="163" Click="MenuItem_Click" Margin="0,0,-23,0"/>
             </MenuItem>
         </Menu>
 
