--- a/View/Departments.xaml
+++ b/View/Departments.xaml
@@ -13,8 +13,8 @@
     </Window.DataContext>
 
     <StackPanel>
-        <ListBox x:Name="ListBoxCustomers" Height="174" ItemsSource="{Binding Customers}"
-                 SelectedItem="{Binding SelectedCustomer}"/>
+        <ListBox x:Name="ListBoxCustomers" Height="174" ItemsSource="{Binding Departments}"
+                 SelectedItem="{Binding SelectedDepartment}"/>
         <Border BorderBrush="Black" CornerRadius="5" Margin="15,15,15,162" Padding="15" BorderThickness="1" Height="183">
             <Grid Margin="0,0,0,-6">
                 <Grid.RowDefinitions>
