--- a/View/Employees.xaml
+++ b/View/Employees.xaml
@@ -4,9 +4,76 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:v1336.View"
+        xmlns:viewModel="clr-namespace:v1336.ViewModel"
         mc:Ignorable="d"
-        Title="Employees" Height="300" Width="300">
-    <Grid>
-        
-    </Grid>
+        Title="Сотрудники" Height="537.789" Width="300">
+    <Window.DataContext>
+        <viewModel:EmployeesVM></viewModel:EmployeesVM>
+    </Window.DataContext>
+
+    <StackPanel>
+        <ListBox Name="ListBoxManagers" Height="100" ItemsSource="{Binding Path=Employees}"
+                 SelectedItem="{Binding SelectedEmployee}">
+
+        </ListBox>
+        <Border BorderBrush="Black" CornerRadius="5" Margin="15,15,15,162" Padding="15" BorderThickness="1" Height="382">
+            <Grid Margin="0,0,0,-6">
+                <Grid.RowDefinitions>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="92"/>
+                    <ColumnDefinition Width="126"/>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+
+                <TextBlock Grid.ColumnSpan="2" Margin="0,10"><Run Text="Фамилия"/></TextBlock>
+
+                <TextBox Grid.Row="0" Grid.Column="1" x:Name="TextBoxLastName" 
+                         Text="{Binding CurrentEmployee.LastName, UpdateSourceTrigger=PropertyChanged}" Margin="0,10"/>
+
+                <TextBlock Grid.Row="1" Grid.ColumnSpan="2" Grid.Column="0" Margin="0,10,0,11"><Run Text="Имя"/></TextBlock>
+
+                <TextBox Grid.Row="1" Grid.Column="1" x:Name="TextBoxFirstName" 
+                         Text="{Binding CurrentEmployee.FirstName, UpdateSourceTrigger=PropertyChanged}" Margin="0,10,0,11"/>
+
+                <TextBlock Grid.Row="2" Grid.ColumnSpan="2" Grid.Column="0" Margin="0,10"><Run Text="Отчество"/></TextBlock>
+
+                <TextBox Grid.Row="2" Grid.Column="1" x:Name="TextBoxFatherName"
+                         Text="{Binding CurrentEmployee.FatherName, UpdateSourceTrigger=PropertyChanged}" Margin="0,10"/>
+
+                <TextBlock Grid.Row="3" Grid.ColumnSpan="2" Grid.Column="0" Margin="0,11,0,10"><Run Text="Телефон"/></TextBlock>
+
+                <TextBox Grid.Row="3" Grid.Column="1" x:Name="TextBoxPhone"
+                         Text="{Binding CurrentEmployee.Phone, UpdateSourceTrigger=PropertyChanged}" Margin="0,11,0,10"/>
+
+                <TextBlock Grid.Row="4" Grid.Column="0" Margin="0,10"><Run Text="Подразделение"/></TextBlock>
+
+                <ComboBox Grid.Row="4" Grid.Column="1" Margin="0,10" DataContext="Departments"></ComboBox>
+
+                <Button Grid.Row="5" Grid.ColumnSpan="2" Grid.Column="0" IsEnabled="{Binding CanExececute}" 
+                        Command="{Binding AddEmployee}"  
+                        Content="Добавить" Margin="0,10,0,11"  
+                />
+
+                <Button Grid.Row="6" Grid.ColumnSpan="2" Grid.Column="0"
+                        Command="{Binding DeleteEmployee}"  
+                        Content="Удалить" Margin="0,10"  
+                />
+
+                <Button Grid.Row="6" Grid.ColumnSpan="2" Grid.Column="0"
+                        Command="{Binding UpdateEmployee}"  
+                        Content="Обновить" Margin="0,10"  
+                />
+            </Grid>
+        </Border>
+    </StackPanel>
+
 </Window>
