--- a/View/Nomenclatures.xaml
+++ b/View/Nomenclatures.xaml
@@ -12,8 +12,8 @@
     </Window.DataContext>
 
     <StackPanel>
-        <ListBox x:Name="ListBoxCustomers" Height="174" ItemsSource="{Binding Customers}"
-                 SelectedItem="{Binding SelectedCustomer}"/>
+        <ListBox x:Name="ListBoxCustomers" Height="174" ItemsSource="{Binding Nomenclatures}"
+                 SelectedItem="{Binding SelectedNomenclature}"/>
         <Border BorderBrush="Black" CornerRadius="5" Margin="15,15,15,162" Padding="15" BorderThickness="1" Height="183">
             <Grid Margin="0,0,0,-6">
                 <Grid.RowDefinitions>
@@ -32,17 +32,17 @@
                 <TextBlock Grid.ColumnSpan="2" Margin="0,8,0,7"><Run Text="Изделие"/></TextBlock>
 
                 <TextBox Grid.Row="0" Grid.Column="1" x:Name="Name" 
-                         Text="{Binding CurrentDepartment.Name, UpdateSourceTrigger=PropertyChanged}" Grid.ColumnSpan="2" Margin="0,8,0,7" />
+                         Text="{Binding CurrentNomenclature.Name, UpdateSourceTrigger=PropertyChanged}" Grid.ColumnSpan="2" Margin="0,8,0,7" />
 
 
                 <Button Grid.Row="1" Grid.ColumnSpan="3" Grid.Column="0" 
-                        Command="{Binding AddDepartment}" Content="Добавить" Margin="0,0,0,8"/>
+                        Command="{Binding AddNomenclature}" Content="Добавить" Margin="0,0,0,8"/>
 
                 <Button 
-                    Command="{Binding UpdateDepartment}" Margin="0,0,0,10" Content="Обновить" Grid.Row="2" Grid.ColumnSpan="3"/>
+                    Command="{Binding UpdateNomenclature}" Margin="0,0,0,10" Content="Обновить" Grid.Row="2" Grid.ColumnSpan="3"/>
                 <Button Grid.ColumnSpan="3" Content="Удалить" HorizontalAlignment="Left" Grid.Row="3"
-                        Command="{Binding DeleteDepartment}"
-                        CommandParameter="{Binding SelectedDepartment}"
+                        Command="{Binding DeleteNomenclature}"
+                        CommandParameter="{Binding SelectedNomenclature}"
                         VerticalAlignment="Top" Width="230" Height="29"/>
 
             </Grid>
