--- a/View/Employees.xaml
+++ b/View/Employees.xaml
@@ -56,10 +56,11 @@
 
                 <TextBlock Grid.Row="4" Grid.Column="0" Margin="0,10"><Run Text="Подразделение"/></TextBlock>
 
-                <ComboBox Grid.Row="4" Grid.Column="1" Margin="0,10" DataContext="Departments"></ComboBox>
+                <ComboBox Grid.Row="4" Grid.Column="1" Margin="0,10" ItemsSource="{Binding Path=Departments}"
+                          SelectedItem="{Binding SelectedEmployee}" ></ComboBox>
 
                 <Button Grid.Row="5" Grid.ColumnSpan="2" Grid.Column="0" IsEnabled="{Binding CanExececute}" 
-                        Command="{Binding AddEmployee}"  
+                        Command="{Binding Path=AddEmployee}"  
                         Content="Добавить" Margin="0,10,0,11"  
                 />
 
