--- a/View/Departments.xaml
+++ b/View/Departments.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:v1336.View"
         xmlns:viewModel="clr-namespace:v1336.ViewModel"
         mc:Ignorable="d"
-        Title="Подразделения" Height="410.236" Width="300">
+        Title="Подразделения" Height="424.903" Width="300">
 
     <Window.DataContext>
         <viewModel:DepartmentsVM></viewModel:DepartmentsVM>
@@ -15,7 +15,7 @@
     <StackPanel>
         <ListBox x:Name="ListBoxCustomers" Height="174" ItemsSource="{Binding Departments}"
                  SelectedItem="{Binding SelectedDepartment}"/>
-        <Border BorderBrush="Black" CornerRadius="5" Margin="15,15,15,162" Padding="15" BorderThickness="1" Height="183">
+        <Border BorderBrush="Black" CornerRadius="5" Margin="15,15,15,15" Padding="15" BorderThickness="1" Height="183">
             <Grid Margin="0,0,0,-6">
                 <Grid.RowDefinitions>
                     <RowDefinition/>
@@ -41,10 +41,10 @@
 
                 <Button 
                     Command="{Binding UpdateDepartment}" Margin="0,0,0,10" Content="Обновить" Grid.Row="2" Grid.ColumnSpan="3"/>
-                <Button Grid.ColumnSpan="3" Content="Удалить" HorizontalAlignment="Left" Grid.Row="3"
+                <Button Grid.ColumnSpan="3" Grid.Column="0" Content="Удалить" Grid.Row="3"
                         Command="{Binding DeleteDepartment}"
                         CommandParameter="{Binding SelectedDepartment}"
-                        VerticalAlignment="Top" Width="230" Height="29"/>
+                        VerticalAlignment="Top" Height="29"/>
 
             </Grid>
         </Border>
