--- a/View/Main.xaml
+++ b/View/Main.xaml
@@ -6,19 +6,13 @@
         xmlns:local="clr-namespace:v1336"
         xmlns:WpfControls="clr-namespace:Nevron.Nov.WpfControls;assembly=Nevron.Nov.WpfControls" xmlns:local1="clr-namespace:v1336.View" x:Class="v1336.View.MainWindow"
         mc:Ignorable="d"
-        Title="MainWindow" Height="579.8" Width="793.5">
+        Title="В-1336" Height="579.8" Width="793.5">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="190*"/>
             <ColumnDefinition Width="203*"/>
         </Grid.ColumnDefinitions>
-        <Grid HorizontalAlignment="Left" Height="156" Margin="21,136,0,0" VerticalAlignment="Top" Width="209" Background="{DynamicResource {x:Static SystemColors.InactiveBorderBrushKey}}" Grid.Column="1">
-            <Button x:Name="BtnManagers" Content="Добавить менеджера" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="178" Height="24" Background="#FFF4FEFF" Click="BtnManagersClick"
-                    />
-            <Button x:Name="BtnCustomers" Content="Добавить заказчика" HorizontalAlignment="Left" Margin="10,52,0,0" VerticalAlignment="Top" Width="178" Height="24" Background="#FFF4FEFF" Click="BtnCustomersClick"
-                    />
-        </Grid>
-        <Menu x:Name="menu" HorizontalAlignment="Left" Height="23" VerticalAlignment="Top" Width="786" RenderTransformOrigin="0.025,0.585" Grid.ColumnSpan="2">
+        <Menu x:Name="menu"  Height="23" VerticalAlignment="Top" Width="786" RenderTransformOrigin="0.025,0.585" Grid.ColumnSpan="2">
             <MenuItem Header="Справочники" Width="94" Height="23">
                 <MenuItem Header="Заказчики" HorizontalAlignment="Left" Width="161" Margin="0,0,-21,0" Click="MenuItem_Click_Customers"/>
                 <MenuItem Header="Менеджеры" HorizontalAlignment="Left" Width="170" Margin="0,0,-30,0" Click="MenuItem_Click_Managers"/>
@@ -26,6 +20,9 @@
                 <MenuItem Header="Изделия" HorizontalAlignment="Left" Width="140" Click="MenuItem_Click_Nomenclatures"/>
                 <MenuItem Header="Работники" HorizontalAlignment="Left" Height="22" Width="163" Margin="0,0,-23,0" Click="MenuItem_Click_Employees"/>
             </MenuItem>
+            <MenuItem Header="Приоритеты" Height="23" Width="100" Click="MenuItem_Click_Priorities"/>
+            <MenuItem Header="Проблемы при производстве" Height="23" Width="175" Click="MenuItem_Click_Problems"/>
+            <MenuItem Header="Авторизация" Height="23" Width="90" Margin="0,0,-739,0" Click="MenuItem_Click_Authorization"/>
         </Menu>
 
 
