--- a/View/Document/OrderV.xaml
+++ b/View/Document/OrderV.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:System="clr-namespace:System;assembly=mscorlib"
         xmlns:model="clr-namespace:v1336.ViewModel"
+        xmlns:model1="clr-namespace:v1336.Model"
 
         mc:Ignorable="d"
         Title="Заявка" Height="741.917" Width="1054.32">
@@ -112,42 +113,30 @@
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
 
-                    <DataGrid Grid.Row="0" Grid.ColumnSpan="6" Margin="10" Grid.Column="0" ItemsSource="{Binding Path=OrderRow, Mode=TwoWay}" AutoGenerateColumns="False" CanUserAddRows="false">
-
+                    <DataGrid SelectedItem="{Binding SelectedRow, Mode=TwoWay}"  ItemsSource="{Binding Path=Rows}" Grid.Row="0" Grid.ColumnSpan="6" Margin="10" Grid.Column="0" AutoGenerateColumns="False" CanUserAddRows="false" SelectionMode="Single" EnableColumnVirtualization="True">
                         <DataGrid.Columns>
-                            <DataGridComboBoxColumn
-                                Width="200*" Header="Категория"
-                                ItemsSource="{Binding Path=Nomenclatures, RelativeSource={RelativeSource AncestorType=UserControl} }"
-                                DisplayMemberPath="Name"
-                                SelectedValuePath="Id"
-                                SelectedValueBinding="{Binding Path=OrderRow.Nomenclature.CategoryId, Mode=TwoWay }">
-                            </DataGridComboBoxColumn>
-                            <DataGridComboBoxColumn Width="200*" Header="Номенклатура" 
-                                                    ItemsSource="{Binding Path=Nomenclatures}"
-                                                    DisplayMemberPath="Name"
-                                                    SelectedValuePath="Id"
-                                                    SelectedValueBinding="{Binding Path=OrderRow.Nomenclature.Id, Mode=TwoWay }"/>
-                            <DataGridTextColumn Width="100*" Header="Количество" Binding="{Binding Path=Quantity, Mode=TwoWay}" />
-
+                            <DataGridTextColumn Width="100*" Header="Категория" Binding="{Binding Path=Nomenclature.NomenclatureCategory.Name}" />
+                            <DataGridTextColumn Width="100*" Header="Номенклатура" Binding="{Binding Path=Nomenclature.Name}" />
+                            <DataGridTextColumn Width="20*" Header="Количество" Binding="{Binding Path=Quantity}" />
                         </DataGrid.Columns>
                     </DataGrid>
 
-                    <TextBlock Text="Категория изделия: " Grid.Column="0" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Center"></TextBlock>
-                    <ComboBox Grid.Column="1" Grid.Row="1" Height="25" Name="cmb_NomCat"></ComboBox>
+                    <TextBlock Text="Категория: " Grid.Column="0" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Center"></TextBlock>
+                    <ComboBox Grid.Column="1" SelectedItem="{Binding Path=Snc, Mode=TwoWay}" ItemsSource="{Binding Path=NomenclatureCategorys}" SelectedValuePath="Id" Grid.Row="1" Height="25" Name="cmb_NomCat" ></ComboBox>
 
-                    <TextBlock Text="Номенклатура изделия: " Grid.Column="2" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Center"></TextBlock>
-                    <ComboBox Grid.Column="3" Height="25" Grid.Row="1" Name="cmb_Nom"></ComboBox>
+                    <TextBlock Text="Номенклатура: "  Grid.Column="2" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Center"></TextBlock>
+                    <ComboBox Grid.Column="3" SelectedValue="{Binding Path=CurrentRow.NomenclatureId}" SelectedItem="{Binding Path=CurrentRow.Nomenclature, Mode=TwoWay}"  ItemsSource="{Binding Path=CurrentNomenclatures}" SelectedValuePath="Id" Height="25" Grid.Row="1" Name="cmb_Nom"></ComboBox>
 
                     <TextBlock Text="Количество: " Grid.Column="4" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Center"></TextBlock>
-                    <TextBox Grid.Column="5" Grid.Row="1" Height="25" Width="100" HorizontalAlignment="Left"></TextBox>
+                    <TextBox Grid.Column="5" Text="{Binding Path=CurrentRow.Quantity}" Grid.Row="1" Height="25" Width="100" HorizontalAlignment="Left"></TextBox>
 
-                    <Button Content="Добавить" Grid.Column="4" Grid.Row="3" Width="120" Height="30" HorizontalAlignment="Right" Margin="20 0 0 0" Click="btn_Add_Row"></Button>
-                    <Button Content="Удалить" Grid.Column="5" Grid.Row="3" Width="120" Height="30" HorizontalAlignment="Left" Margin="20 0 0 0" Click="btn_Delete_Row"></Button>
+                    <Button Content="Добавить" Command="{Binding  AddRow }" CommandParameter="{Binding CurrentRow}" Grid.Column="4" Grid.Row="3" Width="120" Height="30" HorizontalAlignment="Right" Margin="20 0 0 0"  ></Button>
+                    <Button Content="Удалить"  Command="{Binding  DeleteRow }" CommandParameter="{Binding SelectedRow}" Grid.Column="5" Grid.Row="3" Width="120" Height="30" HorizontalAlignment="Left" Margin="20 0 0 0" ></Button>
                 </Grid>
             </Border>
 
-            <Button Content="Сохранить" Grid.ColumnSpan="3" Grid.Column="0" Grid.Row="6" Width="120" Height="30" HorizontalAlignment="Left" Margin="20 0 0 0" Click="btn_Save_Click" ></Button>
-            <Button Content="Отмена" Grid.ColumnSpan="3" Grid.Column="3" Grid.Row="6" Width="120" Height="30" HorizontalAlignment="Right" Margin="0 0 20 0" Click="btn_Exit_Click" ></Button>
+            <Button Content="Сохранить" Command="{Binding  AddOrUpdateItem }" CommandParameter="{Binding Order}" Grid.ColumnSpan="3" Grid.Column="0" Grid.Row="6" Width="120" Height="30" HorizontalAlignment="Left" Margin="20 0 0 0"  ></Button>
+            <Button Content="Отмена" Grid.ColumnSpan="3" Grid.Column="3" Grid.Row="6" Width="120" Height="30" HorizontalAlignment="Right" Margin="0 0 20 0" Click="Button_Click" ></Button>
 
         </Grid>
     </Grid>
